--- a/app/src/main/res/layout/activity_main1.xml
+++ b/app/src/main/res/layout/activity_main1.xml
@@ -75,7 +75,7 @@
 
 
             <LinearLayout
-                android:id="@+id/layoutUserItinary"
+                android:id="@+id/layoutUserItinerary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -151,7 +151,7 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/flight_booking" />
+                    android:src="@drawable/icon_flight" />
 
             </LinearLayout>
 
