--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -151,7 +151,7 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/flight_booking" />
+                    android:src="@drawable/icon_flight" />
 
             </LinearLayout>
 
