--- a/app/src/main/res/layout/grid_layout.xml
+++ b/app/src/main/res/layout/grid_layout.xml
@@ -19,5 +19,5 @@
         android:id="@+id/imageView"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/flight_booking"/>
+        android:src="@drawable/icon_flight"/>
 </LinearLayout>
