--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,7 @@
 
     <color name="backgroundColor">#41e5f4</color>
 
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 
 </resources>
