--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,7 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
 
+    <color name="detail_page_bg">#EAEDED</color>
+
+
 </resources>
