--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
 
     <dimen name="margin_8dp">8dp</dimen>
 
+    <dimen name="margin_4dp">4dp</dimen>
 
     <dimen name="width">36dp</dimen>
     <dimen name="height">36dp</dimen>
