--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,10 @@
     <dimen name="hotel_img_width">100dp</dimen>
     <dimen name="hotel_img_height">100dp</dimen>
 
+    <dimen name="login_register_button_width">200dp</dimen>
+
+    <dimen name="margin_100dp">100dp</dimen>
+    <dimen name="margin_20dp">20dp</dimen>
 
 
 </resources>
